<resources>
    <string name="please_send_us">Please send us some feedback!</string>
    <string name="write_some_feedback">Write some feedback</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="Language">Language</string>
    <string name="change_password">Change password</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="policy">Policy</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="lock">Lock</string>
    <string name="delete">Delete</string>
    <string name="edit_one_more">Edit one more</string>
    <string name="back_to_home">Back to home</string>
    <string name="share_to">Share to</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
</resources>