<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            style="@style/SelectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_back"
            android:fontFamily="@font/barlow_medium_500"
            android:gravity="start"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            tools:text="@string/edit" />


        <TextView
            android:id="@+id/tv_done_filter"
            style="@style/SelectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:includeFontPadding="false"
            android:textSize="@dimen/_13ssp"
            android:textColor="#FF8594"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:fontFamily="@font/barlow_semibold_600"
            android:drawableStart="@drawable/ic_done"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/done" />

    </RelativeLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_header" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_share"
            style="@style/SelectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share_gallery"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/barlow_regular_400"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/share"
            android:textColor="#5D5D5D"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tv_edit"
            style="@style/SelectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_edit_gallery"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/barlow_regular_400"
            android:gravity="center"
            android:includeFontPadding="false"
            android:visibility="gone"
            android:text="@string/edit"
            android:textColor="#5D5D5D"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tv_Lock"
            style="@style/SelectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_lock_gallery"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/barlow_regular_400"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/lock"
            android:textColor="#5D5D5D"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tv_Delete"
            style="@style/SelectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_delete_gallery"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/barlow_regular_400"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/delete"
            android:textColor="#5D5D5D"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
